@@ -9,6 +9,8 @@
 - load only one Lua lib (Thanks Nathanael)
 - add Rufus::Lua::Lib.path to learn which Lua lib got loaded (idea Nathanael)
 - set `ffi_lib_flags(:lazy, :global)` before loading Lua (thanks Nathanael)
+- fix panic error when creating new Rufus::Lua::State with specific
+  list of lib to load (fix by Matthew Nielsen - https://github.com/xunker)
 
 
 == rufus-lua - 1.1.0    released 2009/09/30
